syntax = "proto3";
package coreum.asset.nft.v1;

import "cosmos/base/v1beta1/coin.proto";

import "gogoproto/gogo.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/asset/nft/types";

// Params store gov manageable parameters.
message Params {
  // mint_fee is the fee burnt each time new NFT is minted
  cosmos.base.v1beta1.Coin mint_fee = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"mint_fee\""
  ];
}
